--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "18.2.0",
     "react-web-share": "^2.0.2",
     "swr": "^2.0.3",
+    "usehooks-ts": "^2.9.1",
     "zod": "^3.20.2",
     "zustand": "^4.3.2"
   },
